# openlibrary

./: .babelrc  .browserslistrc  .deepsource.toml  .dockerignore  .eslint.json  .eslintignore  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitmodules  .gitpod.yaml  .gitpod.yml  .hgignore  .htmlvalidate.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .python-version  .sqlfluff  .stylelintignore  .stylelintrc.json  .svgo.yml  .travis.yml  404.html  AGENTS.md  BOOKSHARE_OAUTH_CONFIG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSS_CHANGES.md  Coding-Recipes.html  Developer's-Starter-Guide.html  FASTAPI_AUTHENTICATION_SYSTEM.md  FASTAPI_MIGRATION_GUIDE.md  Fellowships.html  History.html  ISSUE_TEMPLATE.md  Kubernetes.html  LESS_TO_CSS_MIGRATION_PLAN.md  (+123 more)
.dependabot/: config.yml
.github/: CODEOWNERS  FUNDING.yml  axe-linter.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.mypy_cache/: README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.storybook/: main.js  preview.js
1_Everyone/: Community-Call.html  Google-Summer-of-Code.html  Hacktoberfest.html  Home.html  Internationalization.html  Open-Library-Community-Call-Minutes.html  Slack-Channels.html  index.html
2_Developers/: CONTRIBUTING.html  Git-Cheat-Sheet.html  index.html
3_Designers/: Design-Pattern-Library.html
4_Librarians/: Creating-Community-Lists.html  Guide-to-Identifiers.html  Library-Metadata-Standards.html  Mangled-MARC.html
5_Projects/: Canonical-Books-Page.html  Developing-the-Reading-Log.html  Documentation.html  Lead:-Community-Coordinator.html  Lead:-Community-Librarian.html  Library-Community-Congress-2019.html  Orphaned-Editions-Planning.html  Wikidata-Integration.html
6_Advanced/: Anti-Spam-Tools.html  Component-Library.html  Creating-and-Logging-in-as-a-new-user-on-your-local-client.html  Debugging-and-Performance-Profiling.html  Deployment-Guide.html  Deployment-Scratchpad.html  Developer's-Guide-to-Data-Importing.html  Disaster-History-Log.html  Disaster-Recovery-&-Immediate-Response.html  Feature-Flagging.html  Generating-Data-Dumps.html  HOWTO:-Open-Library-Project-Management.html  Monitoring.html  Podman-(docker-alternative).html  Processing-ONIX-Feeds.html  Production-Service-Architecture.html  Production-Service-Architecture_old.html  Provisioning-Guide.html  Sitemap-Generation.html  Solr.html  Using-Cache.html  Using-the-API-with-Csharp.html  archive.org-↔-Open-Library-synchronisation.html  index.html
FastAPI/: main.py.disabled  openapi.json  test_fastapi_hack.py  test_fastapi_hack.py.disabled
assets/: 1_Everyone_Community-Call.md.D81Nk5I_.js  1_Everyone_Community-Call.md.D81Nk5I_.lean.js  1_Everyone_Google-Summer-of-Code.md.D_s3pbzh.js  1_Everyone_Google-Summer-of-Code.md.D_s3pbzh.lean.js  1_Everyone_Hacktoberfest.md.Cln9x4d0.js  1_Everyone_Hacktoberfest.md.Cln9x4d0.lean.js  1_Everyone_Home.md.70tW4Plp.js  1_Everyone_Home.md.70tW4Plp.lean.js  1_Everyone_Internationalization.md.C5n0068W.js  1_Everyone_Internationalization.md.C5n0068W.lean.js  1_Everyone_Open-Library-Community-Call-Minutes.md.Dg7FQiyU.js  1_Everyone_Open-Library-Community-Call-Minutes.md.Dg7FQiyU.lean.js  1_Everyone_Slack-Channels.md.h9YYY48T.js  1_Everyone_Slack-Channels.md.h9YYY48T.lean.js  1_Everyone_index.md.CSkKJta7.js  1_Everyone_index.md.CSkKJta7.lean.js  2_Developers_2_Frontend_Frontend-Guide.md.B85A2hpm.js  2_Developers_2_Frontend_Frontend-Guide.md.B85A2hpm.lean.js  2_Developers_2_Frontend_Using-Vue.md.BP91373s.js  2_Developers_2_Frontend_Using-Vue.md.BP91373s.lean.js  2_Developers_3_Backend_Endpoints.md.CVf7TIZK.js  2_Developers_3_Backend_Endpoints.md.CVf7TIZK.lean.js  2_Developers_3_Backend_General.md.DTkBxo73.js  2_Developers_3_Backend_General.md.DTkBxo73.lean.js  2_Developers_3_Backend_Understanding-The-Data-Model.md.Ce-e8PfW.js  2_Developers_3_Backend_Understanding-The-Data-Model.md.Ce-e8PfW.lean.js  2_Developers_3_Backend_Writing-Bots.md.BDyROxCt.js  2_Developers_3_Backend_Writing-Bots.md.BDyROxCt.lean.js  2_Developers_CONTRIBUTING.md.Y03TLhsJ.js  2_Developers_CONTRIBUTING.md.Y03TLhsJ.lean.js  2_Developers_Git-Cheat-Sheet.md.cexXtKHd.js  2_Developers_Git-Cheat-Sheet.md.cexXtKHd.lean.js  2_Developers_index.md.Cz7jp28V.lean.js  2_Developers_misc_Docker.md.CBL1pL5i.js  2_Developers_misc_Docker.md.CBL1pL5i.lean.js  2_Developers_misc_Loading-Production-Book-Data.md.4iz-Oji5.js  2_Developers_misc_Loading-Production-Book-Data.md.4iz-Oji5.lean.js  2_Developers_misc_OUTDATED-Getting-Started.md.gr54fr3i.js  2_Developers_misc_OUTDATED-Getting-Started.md.gr54fr3i.lean.js  2_Developers_misc_Searching-data-dumps-with-grep-and-jq.md.4yzLUW3G.js  (+88 more)
catalog/: README  TODO  add_uris.py  batch-import.sh  config-example.sh  config.sh  get_ia.py  import.py  import.sh  import_marc.py  infostore.py  items.py  lang.py  load.py  olwrite.py  probe.py  probe.sh  read_rc.py  schema.py  tdb-clear-commands  update_count.py  utils.py
components/: my-book-dropper.md
conf/: .env  bashrc  celeryconfig.py  coverstore.yml  crontab  email.ini  infobase.yml  install.ini  logging.ini  openlibrary-docker.yml  openlibrary.yaml  openlibrary.yml  sample_coverstore.yml  sample_infobase.yml  sample_openlibrary.yml  sentry.yml  services.ini  solr_cron  solr_updater_crons  svgo.config.js  svgo.sprite.config.js
couchapps/: Readme.txt
coverstore/: run.py  sample_coverstore.yml
coverthing/: sample_run.py
docker/: Dockerfile.nginx  Dockerfile.olbase  Dockerfile.olbase.dockerhub  Dockerfile.oldev  Dockerfile.olpy3  Dockerfile.olsolr  README.md  covers_nginx.conf  cron.local  default_nginx.conf  docker-compose.yml  docker-entrypoint.sh  infobase_nginx.conf  nginx.conf  ol-affiliate-server-start.sh  ol-covers-start.sh  ol-cron-start.sh  ol-db-init.sh  ol-docker-start.sh  ol-home-start.sh  ol-importbot-start.sh  ol-infobase-start.sh  ol-install-missing-deps.sh  ol-local-solr-start.sh  ol-monitoring-start.sh  ol-nginx-start.sh  ol-solr-loan-updater-start.sh  ol-solr-start.sh  ol-solr-updater-start.sh  ol-watcher-start.sh  ol-web-fastapi-start.sh  pgbouncer.ini  (+7 more)
(+6443 files in other folders)
